--- a/code/scala/pbt_project.yml
+++ b/code/scala/pbt_project.yml
@@ -47,6 +47,17 @@ pipelines:
       inputs: []
       outputs: []
     dependencies: {}
+  pipelines/W1:
+    name: W1
+    description: Really solid info
+    author: donald.watsica@hotmail.com
+    mode: batch
+    language: scala
+    createdAt: '2022-04-11 11:24:46'
+    datasets:
+      inputs: []
+      outputs: []
+    dependencies: {}
   workflows/Mary_Rath_MD:
     name: Mary_Rath_MD
     description: ''
@@ -81,5 +92,13 @@ pipelines:
       outputs: []
     dependencies: {}
 datasets: {}
-jobs: {}
+jobs:
+  jobs/Angie_ThompsonMay_DayFrancisco_Hagenes:
+    name: Angie_ThompsonMay_DayFrancisco_Hagenes
+    description: Really solid info
+    scheduler:
+      Nil: {}
+    schedulerJobUID: null
+    createdAt: '2022-04-11 11:24:46'
+    author: donald.watsica@hotmail.com
 libraries: []
